--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   crypto: ^3.0.1
   fluttertoast: ^8.2.6
   email_validator: ^2.1.17
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
