--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.1.0
   animate_do: ^3.3.4
+  provider: ^6.1.2
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
