--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   animate_do: ^3.3.4
   provider: ^6.1.2
   http: ^1.2.1
+  printing: ^5.13.1
+  pdf: ^3.11.0
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
