--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path_provider: ^2.1.3
   permission_handler: ^11.3.1
 
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
