--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^11.3.1
 
   path: any
+  google_generative_ai: ^0.4.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
