--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
 
   path: any
   google_generative_ai: ^0.4.3
+  open_file: ^3.3.2
+  flutter_local_notifications: ^17.2.1+1
+  downloads_path_provider_28: ^0.1.2
+  dio: ^5.5.0+1
+  flutter_media_downloader: ^1.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
